# kv

./: Cargo.toml  build.rs
proto/: kv.proto
src/: client.rs  lib.rs  proto.rs  server.rs  storage.rs
src/storage/: in_memory.rs
