[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
futures-core = "0.3.18"
futures-util = "0.3.18"
prost = "0.9.0"
prost-types = "0.9.0"
rand = "0.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["full"] }
tokio-stream = "0.1.8"
tonic = "0.6.1"

[build-dependencies]
tonic-build = "0.6.0"
